# project_fastapi

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  ruff.toml
page_analyzer/: __init__.py  config.py  main.py  modules.py
page_analyzer/api/: urls.py
page_analyzer/models/: database.py  models.py
page_analyzer/repositories/: url_reposetory.py  url_repository.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/urls/: index.html  show.html
